[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Tools/BaseTool.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Tools/Crop.gd" type="Script" id=3]

[node name="ToolOptions" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Top" parent="." index="4" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_top = 26.0
margin_right = 116.0
margin_bottom = 50.0
allow_greater = true
allow_lesser = true
prefix = "Top:"

[node name="Bottom" parent="." index="5" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 116.0
margin_bottom = 78.0
allow_greater = true
allow_lesser = true
prefix = "Bottom:"

[node name="Left" parent="." index="6" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_top = 82.0
margin_right = 116.0
margin_bottom = 106.0
allow_greater = true
allow_lesser = true
prefix = "Left:"

[node name="Right" parent="." index="7" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_top = 110.0
margin_right = 116.0
margin_bottom = 134.0
allow_greater = true
allow_lesser = true
prefix = "Right:"

[node name="Apply" type="Button" parent="." index="8"]
margin_top = 138.0
margin_right = 116.0
margin_bottom = 158.0
text = "Apply"

[node name="DimensionsLabel" type="Label" parent="." index="9"]
unique_name_in_owner = true
margin_top = 162.0
margin_right = 116.0
margin_bottom = 176.0
align = 1

[connection signal="value_changed" from="Top" to="." method="_on_Top_value_changed"]
[connection signal="value_changed" from="Bottom" to="." method="_on_Bottom_value_changed"]
[connection signal="value_changed" from="Left" to="." method="_on_Left_value_changed"]
[connection signal="value_changed" from="Right" to="." method="_on_Right_value_changed"]
[connection signal="pressed" from="Apply" to="." method="apply"]
